--- a/prepros-6.config
+++ b/prepros-6.config
@@ -5,7 +5,9 @@
   "fileConfigs": [],
   "fileTree": {
     "expandedDirs": [
-      "scss"
+      "scss",
+      "js",
+      "scss/common"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -53,7 +55,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
