css 정리 및 수정

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -2,7 +2,20 @@
   "name": "portfolio",
   "firstRun": false,
   "exportConfig": true,
-  "fileConfigs": [],
+  "fileConfigs": [
+    {
+      "path": "scss/ui_common.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"compact\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true}}"
+    },
+    {
+      "path": "scss/ui_main.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"compact\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true}}"
+    },
+    {
+      "path": "scss/ui_style.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"compact\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true}}"
+    }
+  ],
   "fileTree": {
     "expandedDirs": [
       "scss",
@@ -23,19 +36,6 @@
   },
   "imports": [
     {
-      "path": "scss/ui_main.scss",
-      "imports": [
-        "scss/common/variables.scss",
-        "scss/main/main.scss"
-      ]
-    },
-    {
-      "path": "scss/ui_main.scss",
-      "imports": [
-        "scss/common/variables.scss"
-      ]
-    },
-    {
       "path": "scss/ui_common.scss",
       "imports": [
         "scss/common/variables.scss",
@@ -44,6 +44,13 @@
         "scss/common/common.scss",
         "scss/common/fonts.scss",
         "scss/common/animate.scss"
+      ]
+    },
+    {
+      "path": "scss/ui_main.scss",
+      "imports": [
+        "scss/common/variables.scss",
+        "scss/main/main.scss"
       ]
     },
     {
